Add translations for About and Learn Crypto popups, improve mobile UI for select dropdowns, and update configuration
- Added complete translations for About and Learn Crypto popups in all 12 languages
- Fixed duplicate emoji issue in custom select dropdowns
- Improved mobile UI for property type and client type selectors with better scrolling
- Updated .gitignore to exclude supabase-helper.js
- Added .env.example, CUSTOMIZATION_GUIDE.md, and SECURITY.md
- Updated config.js with webhook URL configuration

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,28 @@ chatbot/model/checkpoint-*/**/*.safetensors
 chatbot/model/checkpoint-*/**/*.pt
 chatbot/model/checkpoint-*/**/*.bin
 chatbot/model/checkpoint-*/**/*.pth
+
+# Environment variables and secrets
+.env
+.env.local
+.env.*.local
+*.env
+
+# Supabase credentials
+supabase-direct.js
+query-supabase.js
+supabase-helper.js
+supabase-mcp-server.js
+
+# MCP server (contains secrets)
+supabase-mcp/
+.cursor/mcp.json
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
